No longer animating the hamburger icon because it gets covered by the side-nav.  Need to implement blogs to have perma links and only show meta info on blog page in a grid.

--- a/src/styles/components/side_nav.scss
+++ b/src/styles/components/side_nav.scss
@@ -11,7 +11,7 @@
 
     .top {
         text-align: right;
-        padding-bottom: 20px;
+        padding-bottom: 30px;
         border-bottom: 1px solid orange;
 
         .close-button {
